--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "frontend:test": "cd udagram/udagram-frontend && npm run test",
         "frontend:e2e": "cd udagram/udagram-frontend && npm run e2e",
         "frontend:lint": "cd udagram/udagram-frontend && npm run lint",
-        "frontend:deploy": "cd udagram/udagram-frontend && npm run deploy",
+        "frontend:deploy": "cd udagram/udagram-frontend && npm run deploy1",
         "api:install": "cd udagram/udagram-api && npm install .",
         "api:build": "cd udagram/udagram-api && npm run build",
         "api:start": "cd udagram/udagram-api && npm run dev",
