--- a/udagram/udagram-frontend/package.json
+++ b/udagram/udagram-frontend/package.json
@@ -7,7 +7,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "deploy": "npm install -f && npm run build && chmod +x bin/deploy.sh && bin/deploy.sh",
+    "deploy1": "npm install -f && npm run build  && aws s3 sync www/  s3://udagram1234",
+    "deploy": "npm install -f && npm i dotenv && npm run build && chmod +x ./bin/deploy.sh && ./bin/deploy.sh",
     "test": "ng test --watch=false",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -26,6 +27,7 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
     "core-js": "^2.5.4",
+    "dotenv": "^16.0.1",
     "rxjs": "~6.5.4",
     "zone.js": "~0.9.1"
   },
@@ -45,6 +47,7 @@
     "@typescript-eslint/eslint-plugin": "^2.20.0",
     "@typescript-eslint/parser": "^2.20.0",
     "codelyzer": "~4.5.0",
+    "dotenv-webpack": "^8.0.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.1.4",
@@ -54,6 +57,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
     "ts-node": "~8.0.0",
+    "tslib": "^2.4.0",
     "tslint": "~5.12.0",
     "typescript": "^3.5.3"
   },
