--- a/udagram/udagram-frontend/package.json
+++ b/udagram/udagram-frontend/package.json
@@ -7,8 +7,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "deploy1": "npm install -f && npm run build  && aws s3 sync www/  s3://udagram1234",
-    "deploy": "npm install -f && npm i dotenv && npm run build && chmod +x ./bin/deploy.sh && ./bin/deploy.sh",
+    "deploy": "npm install -f && npm run build  && aws s3 sync www/  s3://udagram1234",
     "test": "ng test --watch=false",
     "lint": "ng lint",
     "e2e": "ng e2e"
