--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ jobs:
             npm run frontend:build
       # TODO: Build the backend API
       - run:
-          name: API Build
+          name: API Build.
           command: |
             npm run api:build
   # deploy step will run only after manual approval
