--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ jobs:
       - aws-cli/setup
       - checkout
       - run:
-          name: Deploy The App
+          name: Deploy App
           # TODO: Install, build, deploy in both apps
           command: |
             npm run deploy
