--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,6 +49,20 @@ jobs:
     docker:
       - image: "cimg/base:stable"
       # more setup needed for aws, node, elastic beanstalk
+    environment:
+      POSTGRES_USERNAME: postgres
+      POSTGRES_PASSWORD: medo2244
+      POSTGRES_DB: db_1
+      PORT: 3000
+      DB_PORT: 5432
+      POSTGRES_HOST: database-1.cqll9ouwnpz2.us-east-1.rds.amazonaws.com
+      AWS_REGION: us-east-1
+      AWS_PROFILE: mohamedamr241
+      AWS_BUCKET: udagram1234
+      URL: http://localhost
+      JWT_SECRET: hello123
+      AWS_ACCESS_KEY_ID: AKIAU7TVOYCS5EGAFB6L
+      AWS_SECRET_ACCESS_KEY: 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
     steps:
       - node/install:
           node-version: "14.0.0"
@@ -59,10 +73,7 @@ jobs:
           name: Deploy App
           # TODO: Install, build, deploy in both apps
           command: |
-            eb init
-            eb setenv POSTGRES_USERNAME=$POSTGRES_USERNAME POSTGRES_PASSWORD=$POSTGRES_PASSWORD POSTGRES_DB=$POSTGRES_DB PORT=$PORT DB_PORT=$DB_PORT POSTGRES_HOST=$POSTGRES_HOST AWS_REGION=$AWS_REGION AWS_PROFILE=$AWS_PROFILE AWS_BUCKET=$AWS_BUCKET URL=$URL JWT_SECRET=$JWT_SECRET AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
             npm run deploy
-            
 
 workflows:
   udagram:
