--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,12 +56,12 @@ jobs:
       - aws-cli/setup
       - checkout
       - run:
-          name: Deploy Back-End App
+          name: Deploy BackEnd App
           # TODO: Install, build, deploy in both apps
           command: |
             eb deploy
 
-          name: Deploy Front-End App
+          name: Deploy FrontEnd App
           # TODO: Install, build, deploy in both apps
           command: |
             npm run frontend:deploy
