--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,7 +59,7 @@ jobs:
           name: Deploy BackEnd App
           # TODO: Install, build, deploy in both apps
           command: |
-            eb deploy
+            npm run api:deploy
       - run:
           name: Deploy FrontEnd App
           # TODO: Install, build, deploy in both apps
